Fixes ASTERISK-26094: Playing MOH to bridge fails with 'Allocation failed'